Tecnical debt #5